# wedding-rsvp-be

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: agents.mdc
.github/instructions/: documentation.instructions.md  src.instructions.md  tests.instructions.md
.github/workflows/: ci.yml
docs/: AGENT_PLAN.md  agent-eval-tests.md  agent-tools-plan.md  plan.md
scripts/: wait_for_db.py
src/: config.py  main.py
src/api/agent/: schemas.py
src/api/common/: __init__.py  dependencies.py  responses.py
src/api/messages/: __init__.py  create.py  list.py  routers.py  schemas.py
src/api/public/: __init__.py  client_config.py  contact.py  create_session.py  routers.py  schemas.py  session.py  turn.py
src/api/users/: __init__.py  login.py  refresh.py  register.py  routers.py  schemas.py  user.py
src/api/wedding_sites/: __init__.py  agent_turn.py  chat_history.py  create.py  delete.py  get_one.py  list.py  patch.py  routers.py  schemas.py
src/db/: __init__.py  alembic.ini  db.py
src/db/migrations/: env.py
src/domains/agent/: agent_config_summary.py  backend.py  chat_history.py  config_merge.py  config_normalize.py  dependencies.py  factory.py  gemini_backend.py  ports.py  service.py  structured_agent_backend.py  stub_backend.py  theme_registry.py  turn_logging.py  wedding_builder_deps.py
src/domains/anonymous_agent_sessions/: dependencies.py  exceptions.py  models.py  repository.py  service.py  token_hash.py
src/domains/contact/: __init__.py  dependencies.py  models.py  repository.py  service.py
src/domains/messages/: dependencies.py  models.py  repository.py  service.py
src/domains/users/: dependencies.py  jwt.py  models.py  password.py  repository.py  service.py
src/domains/wedding_sites/: dependencies.py  enums.py  exceptions.py  models.py  repository.py  service.py
src/middleware/: logging_middleware.py
src/utils/: __init__.py  chat_history.py  datetime.py  logging.py
tests/: conftest.py
tests/api/: test_health.py
tests/api/messages/: __init__.py  test_create.py  test_list.py
tests/api/public/: test_agent_sessions.py  test_agent_turn.py  test_client_config.py  test_contact.py
tests/api/users/: test_get_user.py  test_login.py  test_refresh.py  test_register.py
tests/api/wedding_sites/: test_chat_history.py  test_create.py  test_delete.py  test_get.py  test_list.py  (+2 more)
tests/fixtures/: client.py  database.py  messages.py  users.py  wedding_sites.py
tests/utils/: test_chat_history.py
(+35 files in other folders)
